--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jshint": "^2.8.0",
     "nodemon": "^1.4.0",
     "pre-commit": "^1.1.1",
+    "tap-nyan": "0.0.2",
     "tape": "^4.0.1"
   },
   "pre-commit": [
