--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "handlebars": "^3.0.3",
     "hapi": "^8.8.1",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.1.0",
