--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jshint": "jshint .",
     "start": "node server.js",
     "nodemon": "nodemon server.js",
-    "codeclimate": "CODECLIMATE_REPO_TOKEN=ea5c19d8d1385dea0fda29fec82bcd4268b999056e764d533bb33f836dd16743 codeclimate-test-reporter < ./coverage/lcov.info"
+    "codeclimate": "CODECLIMATE_REPO_TOKEN=ea5c19d8d1385dea0fda29fec82bcd4268b999056e764d533bb33f836dd16743 codeclimate-test-reporter < lcov.info"
   },
   "repository": {
     "type": "git",
@@ -44,7 +44,6 @@
   },
   "pre-commit": [
     "jshint",
-    "coverage",
-    "codeclimate"
+    "coverage"
   ]
 }
