--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "Bubbles",
   "version": "0.0.1",
   "description": "Chat app using Redis, Socket.io and Hapi",
-  "main": "server.js",
+  "main": "lib/server.js",
   "scripts": {
-    "test": "./node_modules/tape/bin/tape ./test/*.js | tap-nyan && npm run coverage && npm run jshint",
-    "coverage": "istanbul cover ./node_modules/tape/bin/tape ./test/*.js && istanbul check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
-    "jshint": "jshint .",
-    "start": "node server.js",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/tape/bin/tape ./test/*test.js && istanbul check-coverage --statements 60 --functions 60 --lines 60 --branches 60",
+    "coverage": "istanbul cover ./node_modules/.bin/tape ./tests/*.js -r html -o ./test/coverage.html",
+    "start": "node lib/server.js",
     "nodemon": "nodemon server.js",
-    "codeclimate": "CODECLIMATE_REPO_TOKEN=ea5c19d8d1385dea0fda29fec82bcd4268b999056e764d533bb33f836dd16743 codeclimate-test-reporter < ./coverage/lcov.info"
+    "codeclimate": "CODECLIMATE_REPO_TOKEN=ea5c19d8d1385dea0fda29fec82bcd4268b999056e764d533bb33f836dd16743 ./node_modules/codeclimate-test-reporter/bin/codeclimate.js < ./lcov.info",
+    "build": "babel lib/*.js -d dist"
   },
   "repository": {
     "type": "git",
@@ -28,23 +28,18 @@
     "url": "https://github.com/heron2014/Bubbles/issues"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "handlebars": "^4.0.5",
     "hapi": "^13.5.0",
+    "inert": "^4.0.1",
     "socket.io": "^1.3.6",
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "vision": "^4.1.0"
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.3.3",
     "istanbul": "^0.4.4",
-    "jshint": "^2.8.0",
     "nodemon": "^1.4.0",
-    "pre-commit": "^1.1.1",
-    "tap-nyan": "0.0.2",
     "tape": "^4.0.1"
-  },
-  "pre-commit": [
-    "jshint",
-    "coverage",
-    "codeclimate"
-  ]
+  }
 }
