--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "handlebars": "^4.0.5",
     "hapi": "^13.5.0",
     "hapi-error": "^1.0.4",
+    "hoek": "^4.0.1",
     "inert": "^4.0.1",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.6",
