--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "bell": "^8.0.0",
+    "fb": "^1.1.1",
     "handlebars": "^4.0.5",
     "hapi": "^13.5.0",
     "hapi-auth-cookie": "^6.1.1",
     "hapi-error": "^1.0.4",
     "hoek": "^4.0.1",
     "inert": "^4.0.1",
+    "mongoose": "^4.5.7",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "vision": "^4.1.0"
