--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hoek": "^4.0.1",
     "inert": "^4.0.1",
     "mongoose": "^4.5.7",
+    "nock": "^8.0.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "vision": "^4.1.0"
