jwt works and several tests

--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "fb": "^1.1.1",
     "handlebars": "^4.0.5",
     "hapi": "^13.5.0",
-    "hapi-auth-cookie": "^6.1.1",
+    "hapi-auth-jwt2": "^7.0.1",
     "hapi-error": "^1.0.4",
     "hoek": "^4.0.1",
     "inert": "^4.0.1",
+    "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.5.7",
     "nock": "^8.0.0",
+    "redis-connection": "^5.0.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "vision": "^4.1.0"
