--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redis-connection": "^5.0.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
+    "socket.io-redis": "^1.0.0",
     "vision": "^4.1.0"
   },
   "devDependencies": {
