--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "bell": "^8.0.0",
+    "bluebird": "^3.4.1",
     "crypto": "0.0.3",
     "env2": "^2.1.0",
     "fb": "^1.1.1",
@@ -44,7 +45,6 @@
     "nock": "^8.0.0",
     "qs": "^6.2.1",
     "redis": "^2.6.2",
-    "redis-connection": "^5.0.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "socket.io-redis": "^1.0.0",
